--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Modo de uso:
 
 2º - executar o script;
 
-A imagem será baixada automaticamente para o diretório onde se encontra o script.
+A imagem será baixada automaticamente para o diretório onde se encontra o script e adicioanda ao clipboard.
